# mpeft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TechnicalSpec.md  build-commands.txt
include/: GGUFEngine.hpp  GGUFReader.hpp  MemoryMap.hpp  Tensor.hpp
reading_resources/: Quantization_Q4K.md
src/: GGUFEngine.cpp  GGUFReader.cpp  MemoryMap.cpp  Tensor.cpp  main.cpp
tests/: tensor_test.cpp
